Added new blocks
Added new blocks

--- a/index.html
+++ b/index.html
@@ -51,10 +51,66 @@
 			</svg>
 			<span class="shopping-counter">12</span>
 		</a>
-
-
 	</header>
 	<!-- /.header -->
+
+	<main class="main container">
+		<div class="slider">
+			<div class="slide slide-text-light slide-summer">
+				<div class="slide-content">
+					<h2 class="slide-title">Неделя летних овощей</h2>
+					<p class="slide-text">Специальная овощная корзина. Новые продукты,
+						специальные цены, скидки!</p>
+					<a href="#" class="button button-primary">Заказать со скидкой</a>
+				</div>
+				<!-- /.slide-content -->
+			</div>
+			<!-- /.slide -->
+		</div>
+		<!-- /.slider -->
+
+		<div class="promo">
+			<section class="card card-text-light sweet-basket">
+				<img class="card-img" src="img/promo/01.jpg" alt="">
+				<div class="card-header">
+					<h3 class="card-title">Сладкая корзина</h3>
+					<p class="card-description">
+						Произвольный выбор
+						десертов по Вашему
+						желанию.</p>
+				</div>
+				<!-- /.card-header -->
+				<div class="card-footer">
+					<strong class="card-price">ОТ 1 300 ₽</strong>
+					<span class="card-delivery">стоимость доставки до 200 ₽</span>
+					<a href="#" class="button button-default">Собрать корзину</a>
+				</div>
+				<!-- /.card-footer -->
+			</section>
+			<!-- /.card -->
+			
+			<section class="card card-text-light sweet-basket-second">
+				<img class="card-img" src="img/promo/02.jpg" alt="">
+				<div class="card-header">
+					<h3 class="card-title">Минимум усилий</h3>
+					<p class="card-description">
+						Произвольный выбор
+						десертов по Вашему
+						желанию.</p>
+				</div>
+				<!-- /.card-header -->
+				<div class="card-footer">
+					<strong class="card-price">ОТ 700 ₽</strong>
+					<span class="card-delivery">стоимость доставки до 200 ₽</span>
+					<a href="#" class="button button-default">Собрать корзину</a>
+				</div>
+				<!-- /.card-footer -->
+			</section>
+			<!-- /.card -->
+		</div>
+
+
+	</main>
 
 
 
